<resources>
    <string name="app_name">Driver App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_options">Options</string>
    <string name="comet_ride">CometRide</string>
    <string name="select_cab_route">Select Cab Route</string>
    <string name="select_cab_type">Select Cab Type</string>
    <string name="seven_seater">7 Seater</string>
    <string name="nine_seater">9 Seater</string>
    <string name="click_image">Click Image</string>
    <string name="continue_button">Continue</string>
    <string name="route1"> McDermott Library</string>
    <string name="route2"> University Commons</string>
    <string name="route3"> Rutford North/South</string>
    <string name="route4"> University Village Phase 1 to 3</string>
    <string name="route5"> University Village Phase 4 to 7</string>
    <string name="title_activity_driver">Driver</string>
    <string name="title_activity_driver_login">DriverLogin</string>
    <string name="total_riders_today">Total Riders Today:</string>
    <string name="line">----</string>
    <string name="title_activity_driver2">Driver2</string>



</resources>
