<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.sandeep.da.Options"
    android:background="#ffffffff">

    <TextView
        android:id="@+id/cometride"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffc75b12"
        android:gravity="center"
        android:text="@string/comet_ride"
        android:textColor="#ff000000"
        android:textSize="45sp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        android:paddingLeft="15dp">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_cab_route"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Spinner
        android:id="@+id/Spinnercabroute"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:entries="@array/cabroutes"
        android:textSize="25sp"
        android:spinnerMode="dropdown"
        android:touchscreenBlocksFocus="true"
        android:transitionGroup="true"
        style="@style/Base.Widget.AppCompat.Spinner" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_cab_type"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="63dp"
                android:text="@string/seven_seater" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="61dp"
                android:text="@string/nine_seater" />
        </RadioGroup>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="OpenDriver"
        android:text="@string/continue_button" />


</LinearLayout>
</LinearLayout>
