<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffffff"
    tools:context="com.sandeep.da.Driver">

    <TextView
        android:id="@+id/cometride"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffc75b12"
        android:gravity="center"
        android:text="@string/comet_ride"
        android:textColor="#ff000000"
        android:textSize="45sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="79dp"
        android:background="#ffffffff"
        android:orientation="horizontal"
        android:weightSum="1">

        <Space
            android:layout_width="30dp"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.22"
            android:text="@string/total_riders_today"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff585858"
            android:textSize="27sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.12"
            android:text="22"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff585858"
            android:textSize="27sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="315dp"
        android:background="#ffffffff"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="192dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="#ffffffff"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff484848"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/line"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff585858"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="7"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#ff585858"
                android:textSize="60sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="192dp"
            android:layout_height="match_parent"
            android:background="#ffffffff"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/plus"
                android:layout_width="189dp"
                android:layout_height="138dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:background="#ffffffff"
                android:scaleType="centerInside"
                android:src="@drawable/plus1"
                android:contentDescription="@string/click_image"/>

            <ImageButton
                android:id="@+id/minus"
                android:layout_width="match_parent"
                android:layout_height="133dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:background="#ffffffff"
                android:scaleType="centerInside"
                android:src="@drawable/minus1"
                android:contentDescription="@string/click_image" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="92dp"
        android:layout_gravity="center_horizontal"
        android:background="#ffffffff"
        android:orientation="vertical"
        android:weightSum="1">


        <Switch
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/switch1"
            android:textOff="OFF Duty"
            android:textOn="ON Duty"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold" />
    </LinearLayout>



</LinearLayout>
